objects/Visitor__c.object
<CustomObject>
    <fields>
        <fullName>Name_of_Visitor__c</fullName>
        <label>Name of Visitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Patient__c</fullName>
        <label>Select Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Visitors</relationshipLabel>
        <relationshipName>Visitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visitors_Emails__c</fullName>
        <label>Visitors Emails</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Visitors_Phone__c</fullName>
        <label>Visitors Phone</label>
        <type>Phone</type>
    </fields>
    <label>Visitor</label>
    <nameField>
        <displayFormat>RH-{MM}{00000}</displayFormat>
        <label>Visitor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>